# artichat

./: .env.example  .gitignore  README.md  docker-compose.yml
configs/: redis.conf
services/backend/: Dockerfile  pyproject.toml
services/backend/app/: __init__.py  main.py
services/backend/app/api/: __init__.py  routes.py
services/backend/app/core/: config.py
services/backend/app/middleware/: security.py
services/backend/app/models/: __init__.py  schemas.py
services/backend/app/services/: __init__.py  agent.py  cache.py  embeddings.py  ingestion.py
services/worker/: Dockerfile  main.py  pyproject.toml
services/worker/app/: __init__.py  config.py  document_store.py  enrichment.py  health.py  loader.py  schemas.py  storage.py  worker.py
