[tool.poetry]
name = "artichat-backend-python"
version = "0.1.0"
description = "Simple Python backend for Artichat"
authors = ["Artichat Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
aioredis = "^2.0.1"
aio-pika = "^9.0.0"
chromadb = "^0.5.5"
httpx = "^0.27.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-chroma = "^0.1.0"
langchain-community = "^0.3.0"
openai = "^1.5.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
